[metadata]
name = shakhbanov
version = 0.2.0
author = Zurab Shakhbanov
author_email = zurab@shakhbanov.ru
description = ML tools for time series
long_description = file: README.md
long_description_content_type = text/markdown
url = https://shakhbanov.org
project_urls =
    GitHub = https://github.com/shakhbanov/shakhbanov
download_url = https://github.com/shakhbanov/shakhbanov/archive/refs/tags/v0.1.0.tar.gz
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    matplotlib
    tqdm
    typing
    joblib
    prophet
    lightgbm
    holidays
    scikit-learn
    pykalman
